--- a/web/src/main/webResources/reporting.html
+++ b/web/src/main/webResources/reporting.html
@@ -50,6 +50,7 @@
         <em><a ng-href="{{config.repository}}/commit/{{config.version}}">v.{{config.version.substr(0, 7)}}</a></em>
       </div>
     </nav>
+    <script src="app/polyfills.js"></script>
     <script src="assets/libs/jquery/jquery-2.1.1.min.js"></script>
 
     <script src="assets/libs/moment.min.js"></script>
